--- a/styles/styles.css
+++ b/styles/styles.css
@@ -200,7 +200,7 @@ button.button {
   max-width: 100%;
   margin: 0;
   border: 1px solid var(--text-color);
-  border-radius: 0;
+  border-radius: 100px;
   padding: 12px 24px;
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-s);
